Updated interactive course map with descriptions, fixed spacing on projects and contact page, updated Rhiza paragraph to include more detail.

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ h1 {
 .smaller {
     text-align: center;
     margin: 15%;
+    margin-top: 5%;
 }
 
 .course-image {
